# prog2006-ircmq-client

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  readme.md
src/: client.rs  main.rs  message.rs  terminalui.rs  ui.rs
