[package]
name = "client-rust"
version = "0.1.0"
authors = ["Dennis Kristiansen <denniskristiansen@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = { version = "0.9.2", features = ["vendored"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
crossterm = "0.19.0"
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
anyhow = "1.0.40"
clap = "2.33.3"
